Tweak palloc/repalloc to allow zero bytes to be requested, as per recent proposal.  Eliminate several dozen now-unnecessary hacks to avoid palloc(0). (It's likely there are more that I didn't find.)

--- a/src/backend/utils/mmgr/README
+++ b/src/backend/utils/mmgr/README
@@ -53,6 +53,26 @@ that can be reset or deleted at strategic times within a query, such as
 after each tuple.
 
 
+Some notes about the palloc API versus standard C library
+---------------------------------------------------------
+
+The behavior of palloc and friends is similar to the standard C library's
+malloc and friends, but there are some deliberate differences too.  Here
+are some notes to clarify the behavior.
+
+* If out of memory, palloc and repalloc exit via elog(ERROR).  They never
+return NULL, and it is not necessary or useful to test for such a result.
+
+* palloc(0) is explicitly a valid operation.  It does not return a NULL
+pointer, but a valid chunk of which no bytes may be used.  (However, the
+chunk might later be repalloc'd larger; it can also be pfree'd without
+error.)  (Note: this behavior is new in Postgres 7.5; earlier versions
+disallowed palloc(0).  It seems more consistent to allow it, however.)
+Similarly, repalloc allows realloc'ing to zero size.
+
+* pfree and repalloc do not accept a NULL pointer.  This is intentional.
+
+
 pfree/repalloc no longer depend on CurrentMemoryContext
 -------------------------------------------------------
 
