--- a/src/interfaces/jdbc/org/postgresql/errors_ru.properties
+++ b/src/interfaces/jdbc/org/postgresql/errors_ru.properties
@@ -1,13 +1,19 @@
-# This is the default errors
-postgresql.arr.range:The array index is out of range.
-postgresql.drv.version:An internal error has occured. Please recompile the driver.
-postgresql.con.auth:The authentication type {0} is not supported. Check that you have configured the pg_hba.conf file to include the client's IP address or Subnet, and that it is using an authentication scheme supported by the driver.
-postgresql.con.authfail:An error occured while getting the authentication request.
-postgresql.con.backend:Backend start-up failed: {0}
+# errors_ru.properties
+# Translation into Russian, (C) 2003 Serguei A. Mokhov, mokhov@cs.concordia.ca
+#
+# ChangeLog:
+#
+# - October 12, 2003 - ... Initial translation
+#
+postgresql.arr.range:Индекс массива вне диапазона.
+postgresql.drv.version:Внутренняя ошибка. Пожалуйста перекомпилируйте драйвер.
+postgresql.con.auth:Тип аутентификации {0} не поддерживается. Проверьте что вы сконфигурировали файл pg_hba.conf чтобы включить IP адреса клиентов или подсеть. Также удостовертесь что он использует схему аутентификации поддерживаемую драйвером.
+postgresql.con.authfail:Ошибка при получении запроса на аутентификацию.
+postgresql.con.backend:Запуск бэкенда не удался: {0}
 postgresql.con.call:Callable Statements are not supported at this time.
 postgresql.con.invalidchar:Invalid character data was found.  This is most likely caused by stored data containing characters that are invalid for the character set the database was created in.  The most common example of this is storing 8bit data in a SQL_ASCII database.
 postgresql.con.closed:Connection is closed.  Operation is not permitted.
-postgresql.con.creobj:Failed to create object for {0} {1}
+postgresql.con.creobj:Не удалось создать объект для {0} {1}
 postgresql.con.failed:The connection attempt failed because {0}
 postgresql.con.failed.bad.encoding:The connection attempt failed trying to get the server encoding
 postgresql.con.failed.bad.autocommit:The connection attempt failed trying to get the autocommit status
@@ -31,11 +37,11 @@ postgresql.con.isolevel:Transaction isolation level {0} is not supported.
 postgresql.con.tuple:Tuple received before MetaData.
 postgresql.con.type:Unknown Response Type {0}
 postgresql.con.user:The user property is missing. It is mandatory.
-postgresql.error.detail:Detail: {0}
-postgresql.error.hint:Hint: {0}
-postgresql.error.position:Position: {0}
-postgresql.error.where:Where: {0}
-postgresql.error.location:Location: {0}
+postgresql.error.detail:Подробности: {0}
+postgresql.error.hint:Подсказка: {0}
+postgresql.error.position:Позиция: {0}
+postgresql.error.where:Где: {0}
+postgresql.error.location:Местонахождение: {0}
 postgresql.fp.error:FastPath call returned {0}
 postgresql.fp.expint:Fastpath call {0} - No result was returned and we expected an integer.
 postgresql.fp.protocol:FastPath protocol error: {0}
@@ -59,22 +65,22 @@ postgresql.prep.param:No value specified for parameter {0}
 postgresql.prep.range:Parameter index out of range.
 postgresql.prep.type:Unknown Types value.
 postgresql.res.badbigdec:Bad BigDecimal {0}
-postgresql.res.badbyte:Bad Byte {0}
+postgresql.res.badbyte:Плохой Byte {0}
 postgresql.res.baddate:Bad Date Format at {0} in {1}
-postgresql.res.baddouble:Bad Double {0}
-postgresql.res.badfloat:Bad Float {0}
-postgresql.res.badint:Bad Integer {0}
-postgresql.res.badlong:Bad Long {0}
-postgresql.res.badshort:Bad Short {0}
+postgresql.res.baddouble:Плохой Double {0}
+postgresql.res.badfloat:Плохой Float {0}
+postgresql.res.badint:Плохой Integer {0}
+postgresql.res.badlong:Плохой Long {0}
+postgresql.res.badshort:Плохой Short {0}
 postgresql.res.badtime:Bad Time {0}
 postgresql.res.badtimestamp:Bad Timestamp Format at {0} in {1}
 postgresql.res.closed:Result set is closed.  Operation is not permitted.
 postgresql.res.colname:The column name {0} not found.
-postgresql.res.colrange:The column index is out of range.
+postgresql.res.colrange:Индекс колонки вне диапазона.
 postgresql.res.nextrequired:Result set not positioned properly, perhaps you need to call next().
-postgresql.serial.interface:You cannot serialize an interface.
+postgresql.serial.interface:Нельзя сериализовать интерфейс.
 postgresql.serial.namelength:Class & Package name length cannot be longer than 64 characters. {0} is {1} characters.
-postgresql.serial.noclass:No class found for {0}
+postgresql.serial.noclass:Класс не найден для {0}
 postgresql.serial.table:The table for {0} is not in the database. Contact the DBA, as the database is in an inconsistent state.
 postgresql.serial.underscore:Class names may not have _ in them. You supplied {0}.
 postgresql.stat.batch.error:Batch entry {0} {1} was aborted. Call getNextException() to see the cause.
@@ -93,7 +99,7 @@ postgresql.updateable.emptydelete:Can't deleteRow() on empty result set
 postgresql.updateable.beforestartdelete:Before start of result set. Can not call deleteRow().
 postgresql.updateable.afterlastdelete:After end of result set. Can not call deleteRow().
 postgresql.updateable.notoninsertrow:Not on insert row.
-postgresql.updateable.ioerror:Input Stream Error - {0}
+postgresql.updateable.ioerror:ошибка Input Stream - {0}
 postgresql.call.noreturntype:A CallableStatement Function was declared but no call to 'registerOutParameter (1, <some_type>)' was made.
 postgresql.call.noinout:PostgreSQL only supports function return value [@ 1] (no OUT or INOUT arguments)
 postgresql.call.procasfunc:This Statement [{0}] defines a procedure call (needs ?= call <stmt> to be considered a function.
