--- a/src/bin/initdb/po/ru.po
+++ b/src/bin/initdb/po/ru.po
@@ -8,7 +8,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PostgreSQL 7.5.x\n"
+"Project-Id-Version: PostgreSQL 8.0\n"
 "POT-Creation-Date: 2004-05-29 07:15-0300\n"
 "PO-Revision-Date: 2004-05-29 17:08-0500\n"
 "Last-Translator: Serguei A. Mokhov <mokhov@cs.concordia.ca>\n"
