--- a/src/bin/pg_controldata/po/ru.po
+++ b/src/bin/pg_controldata/po/ru.po
@@ -4,14 +4,14 @@
 # $PostgreSQL$
 #
 # ChangeLog:
-#   - March 27, 2004: Update for 7.5.*; <mokhov@cs.concordia.ca>
+#   - March 27, 2004: Update for 8.0.*; <mokhov@cs.concordia.ca>
 #   - July 24 - August 23, 2003: Update for 7.4.*; <mokhov@cs.concordia.ca>
 #   - September 7, 2002: Complete post 7.3beta1 Translation, Serguei A. Mokhov <mokhov@cs.concordia.ca>
 #   - August 31, 2002: Initial Translation, Serguei A. Mokhov <mokhov@cs.concordia.ca>
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PostgreSQL 7.5.x\n"
+"Project-Id-Version: PostgreSQL 8.0\n"
 "POT-Creation-Date: 2004-03-27 14:11-0400\n"
 "PO-Revision-Date: 2004-03-27 14:05-0500\n"
 "Last-Translator: Serguei A. Mokhov <mokhov@cs.concordia.ca>\n"
