--- a/src/bin/pg_ctl/po/ru.po
+++ b/src/bin/pg_ctl/po/ru.po
@@ -4,11 +4,11 @@
 # $Header$
 #
 # ChangeLog:
-#   - May 29, 2004: Initial translation for 7.5; Serguei A. Mokhov <mokhov@cs.concordia.ca>
+#   - May 29, 2004: Initial translation for 8.0; Serguei A. Mokhov <mokhov@cs.concordia.ca>
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PostgreSQL 7.5.x\n"
+"Project-Id-Version: PostgreSQL 8.0\n"
 "POT-Creation-Date: 2004-05-29 20:53-0400\n"
 "PO-Revision-Date: 2004-05-29 21:57-0500\n"
 "Last-Translator: Serguei A. Mokhov <mokhov@cs.concordia.ca>\n"
