--- a/src/bin/psql/po/ru.po
+++ b/src/bin/psql/po/ru.po
@@ -4,7 +4,7 @@
 # $PostgreSQL$
 #
 # ChangeLog:
-#   - March 27 - May 28, 2004: Updates for 7.5.*; <mokhov@cs.concordia.ca>
+#   - March 27 - May 28, 2004: Updates for 8.0; <mokhov@cs.concordia.ca>
 #   - July 26 - October 12, 2003: Update for 7.4.x; <mokhov@cs.concordia.ca>
 #   - October 12, 2002: Complete post-7.3beta2 Translation, Serguei A. Mokhov <mokhov@cs.concordia.ca>
 #   - September 7, 2002: Complete post-7.3beta1 Translation, Serguei A. Mokhov <mokhov@cs.concordia.ca>
@@ -12,7 +12,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PostgreSQL 7.5.x\n"
+"Project-Id-Version: PostgreSQL 8.0\n"
 "POT-Creation-Date: 2004-05-28 01:39-0300\n"
 "PO-Revision-Date: 2004-05-28 01:31-0500\n"
 "Last-Translator: Serguei A. Mokhov <mokhov@cs.concordia.ca>\n"
