Translation fix by Julien Cristau

--- a/src/backend/po/fr.po
+++ b/src/backend/po/fr.po
@@ -1091,7 +1091,7 @@ msgstr "La colonne «%s» a le type composite %s"
 #: catalog/heap.c:734 catalog/index.c:522 commands/tablecmds.c:1292
 #, c-format
 msgid "relation \"%s\" already exists"
-msgstr "La relation «%s» n'existe pas"
+msgstr "La relation «%s» existe déjà"
 
 #: catalog/heap.c:1556 commands/tablecmds.c:2812 commands/tablecmds.c:2854
 #, c-format
@@ -1605,7 +1605,7 @@ msgstr "Impossible d'utiliser un emplacement différent pour cette plateforme"
 #: commands/dbcommands.c:653
 #, c-format
 msgid "database \"%s\" already exists"
-msgstr "La base de données «%s» n'existe pas"
+msgstr "La base de données «%s» existe déjà"
 
 #: commands/dbcommands.c:231
 #, c-format
